public class AnimatorParams
{
    public const string idle = "idle";
    public const string run = "run";
    public const string take_damage = "take_damage";
    public const string attack_A = "attack_A";
    public const string attack_B = "attack_B";
    public const string death_A = "death_A";
    public const string death_B = "death_B";
}